# pet-friendly-travel

./: .gitignore  README.md  package.json
client/: .gitignore  README.md  index.html  package-lock.json  package.json
client/src/: App.css  App.jsx  index.css
client/src/components/: ProtectedRoute.css  ProtectedRoute.jsx
client/src/components/Layout/: AppLayout.css  (+4 more)
client/src/constants/: index.js
client/src/hooks/: useAuth.jsx
client/src/pages/: BookingDetailPage.jsx  BookingsPage.jsx  ConfirmationPage.jsx  HomePage.jsx  Login.jsx  Registration.jsx  SearchResults.jsx
client/src/services/: api.js  authService.js  bookingService.js  travelService.js
client/src/styles/: global.css
server/: .env.example  .gitignore  README.md  SEED DATA FOR TESTING  init_db-3.sql  pyproject.toml
server/app/: main.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: auth.py  booking.py  destination.py  flights.py  hotels.py  rapidapi.py  travel.py  trips.py
server/app/core/: config.py  database.py  db_migrate.py  debug_log.py  deps.py  geoapify_client.py  paths.py  rapidapi_client.py  security.py
server/app/data/: pet_airline_policies.py
server/app/models/: __init__.py  booking.py  trips_schema.py  userprofile.py
server/app/schemas/: auth.py  booking.py  flight.py  hotel.py  init_db.sql  postgres_trips.sql  postgres_userprofile.sql  schema.sql  trip.py  trip_db.py
server/app/services/: destination_service.py  rapidapi_service.py  trip_persist_service.py  trip_search_service.py
server/travel_agency_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+8 files in other folders)
