[project]
name = "travel-agency-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amadeus>=12.0.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
